# IOQP

./: .gitignore  Cargo.toml  README.md  build.rs  desires.sh  desires_index.sh  desires_qry.sh  desires_qry_fixed.sh
benches/: decode.rs  determine_max.rs
script/: build-indexes.sh  download-data.sh  run-queries.sh
src/: ciff.rs  compress.rs  impact.rs  index.rs  lib.rs  list.rs  new_ciff.rs  query.rs  range.rs  result.rs  score.rs  search.rs  util.rs
src/bin2/: create.rs
src/ciff_proto/: common-index-format-v1.proto
src/index/: impact.rs  list.rs
