[package]
name = "ioqp"
version = "0.1.0"
authors = ["Joel Mackenzie <joel.m.mackenzie@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
bincode = "1.3.3"
bitpacking = "0.8.4"
byteorder = "1.4.3"
protobuf = "2.24.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
streamvbyte = "0.1.1"
structopt = "0.3.21"
 tracing = "0.1"
 tracing-bunyan-formatter = "0.2.4"
tracing-subscriber = "0.2.19"
 
[build-dependencies]
protobuf-codegen-pure = "2.14"
