[package]
name = "ioqp"
version = "0.1.0"
authors = ["Joel Mackenzie <joel.m.mackenzie@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
bincode = "1.3.3"
bitpacking = "0.8.4"
byteorder = "1.4.3"
indicatif = { version = "0.16.2", features = ["rayon"] }
protobuf = "2.24.1"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
smallvec = { version = "1.6.1", features = ["serde"] }
streamvbyte = "0.1.1"
structopt = "0.3.21"
tracing = "0.1.26"
tracing-appender = "0.1.2"
axum = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0.79"
parking_lot = "0.12.0"
ordered-float = "2.0"
twox-hash = "1.6.2"

[build-dependencies]
protobuf-codegen-pure = "2"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "determine_max"
harness = false

[profile.release]
debug = true
panic = "abort"
